# dnsheader-conversion-microbenchmark

./: Cargo.toml  README.md  generate_assembly.sh
generated_assembly/: debug_branched1.asm  debug_branched2.asm  debug_branchless.asm  release_branched1.asm  release_branched2.asm  release_branchless.asm
src/: header_conversion.rs  lib.rs  random_header.rs
