[package]
name = "test_benchmark"
version = "0.1.0"

[lib]
name = "header_util"
path = "src/lib.rs"

[[bin]]
name = "random_bench"
path = "src/bin/random_bench.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
